--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Check out the repository
     - uses: actions/checkout@v4
+
+    # Set up Python environment
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'  # Specify the Python version (e.g., 3.8, 3.9, etc.)
+
+    # Install dependencies
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest black  # Add your project's dependencies as well
+        RUN pip install --no-cache-dir --upgrade -r requirements.txt
+
+    # Lint with Flake8
+    - name: Lint with flake8
+      run: |
+        flake8 .  # Lints the code in the current directory
+
+    # Run tests with pytest
+    - name: Test with pytest
+      run: |
+        pytest  # Runs all the tests in the project
+
+    # Format code with Black (optional)
+    - name: Check code formatting with Black
+      run: |
+        black --check .  # Checks if the code is formatted according to Black
+
+    # Build the Docker image (only runs if the previous steps pass)
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
