--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,22 +27,22 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest black  # Add your project's dependencies as well
-        RUN pip install --no-cache-dir --upgrade -r requirements.txt
+        pip install --no-cache-dir --upgrade -r requirements.txt
 
     # Lint with Flake8
     - name: Lint with flake8
       run: |
-        flake8 .  # Lints the code in the current directory
+        flake8 .\app  # Lints the code in the current directory
 
     # Run tests with pytest
     - name: Test with pytest
       run: |
-        pytest  # Runs all the tests in the project
+        pytest .\app # Runs all the tests in the project
 
     # Format code with Black (optional)
     - name: Check code formatting with Black
       run: |
-        black --check .  # Checks if the code is formatted according to Black
+        black --check .\app  # Checks if the code is formatted according to Black
 
     # Build the Docker image (only runs if the previous steps pass)
     - name: Build the Docker image
