--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
 
     # Lint with Flake8
     - name: Lint with flake8
+      if: false 
       run: |
         flake8 ./app  # Lints the code in the current directory
 
