--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,22 @@
 name: Docker Image CI
 
 on:
+  workflow_dispatch:
+      inputs:
+        logLevel:
+          description: 'Log level'
+          required: true
+          default: 'information'
+          type: choice
+          options:
+            - information
+            - debug
+            - warning
+            - critical
+        tags:
+          description: 'Purpose of Run This Workflow?'
+          required: true
+          type: string
   push:
     branches: [ "main" ]
   pull_request:
